--- a/rfid/manager/templates/manager/index.html
+++ b/rfid/manager/templates/manager/index.html
@@ -3,5 +3,5 @@
 	{% csrf_token %}
 	<input type="text" name="rollno" id="rollno">
 	<br><br>
-	<input type="submit" value="submit">
+	<input type="submit" value="View Details">
 <form>
