--- a/rfid/manager/templates/manager/enter.html
+++ b/rfid/manager/templates/manager/enter.html
@@ -18,6 +18,17 @@
     <meta name="author" content="">
 
     <title>NIT Warangal Mess Attendance</title>
+    <script type="text/javascript">
+    <!--
+    function goToPage(page){
+      $(document).ready(function(){
+      $('body').fadeOut(1000, function(){
+      window.location=page;
+      });
+      });
+    }
+//-->
+</script>
 
     <!-- Bootstrap Core CSS -->
     <link href="{%  static 'manager/bootstrap.min.css' %}" rel="stylesheet">
@@ -30,18 +41,19 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 </head>
-   <body>
+   <body style="background-color:#DCDCDC;">
+    <!-- <img src="{% static 'manager/images/nitw.jpg' %}" style="z-index:-10;opacity:0.4; display: cover; margin-top: 150px; margin-left:550px; position:relative"> -->
    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <a href={% url 'index' %}><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"></a>
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">NITW Online Mess Attendance</a>
+                <a class="navbar-brand" href={% url 'index' %}>NITW Online Mess Attendance</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,14 +84,14 @@
       <form class="form-signin" method="POST" action={% url 'entered' %}>
       	{% csrf_token %}
         <h2 class="form-signin-heading"><center>Please Enter your Registration Number</center></h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
+        <label for="inputEmail" class="sr-only" style="padding-top:20px;">Email address</label>
         <input type="text" name="rollno" id="rollno" class="form-control" placeholder="Registration number" required autofocus>
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="View Details">Sign in</button>
+        <a href="javascript:goToPage('{% url 'entered' %}')"><button class="btn btn-lg btn-primary btn-block" type="submit" value="View Details">Sign in</button></a>
         <div class="submit" style="padding: 10px 16px;
 font-size: 18px;
 line-height: 1.33;
